<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rlv_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llt_btn"/>

    <LinearLayout
        android:id="@+id/llt_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_7"
                android:text="@string/marginal_data"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_8"
                android:drawableLeft="@mipmap/ic_football_text_jiao"
                android:gravity="bottom"
                android:text="@string/corner_ball"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_8"
                android:drawableLeft="@mipmap/ic_football_text_ru"
                android:gravity="bottom"
                android:text="@string/goal"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_8"
                android:drawableLeft="@mipmap/ic_football_text_dian"
                android:gravity="bottom"
                android:text="@string/penalty_kick"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_8"
                android:drawableLeft="@mipmap/ic_football_text_wu"
                android:gravity="bottom"
                android:text="@string/wulong_ball"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_17"
            android:layout_marginBottom="@dimen/dp_17"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_15"
                android:drawableLeft="@mipmap/ic_football_text_yellow_card"
                android:gravity="bottom"
                android:text="@string/yellow_card"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_15"
                android:drawableLeft="@mipmap/ic_football_text_red_card"
                android:gravity="bottom"
                android:text="@string/red_card"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_15"
                android:drawableLeft="@mipmap/ic_football_text_yellow_card"
                android:gravity="bottom"
                android:text="@string/two_yellow_card"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_15"
                android:drawableLeft="@mipmap/ic_football_text_huan"
                android:gravity="bottom"
                android:text="@string/substitution"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>