<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_9"
            android:layout_marginTop="@dimen/dp_14"
            android:gravity="center"
            android:text="@string/recent_record"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_home_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_toLeftOf="@+id/tv_guest_team"
            android:background="@drawable/shape_0090ec_15"
            android:paddingLeft="@dimen/dp_19"
            android:paddingTop="@dimen/dp_3"
            android:paddingRight="@dimen/dp_19"
            android:paddingBottom="@dimen/dp_3"
            android:text="@string/home_team"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_guest_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_13"
            android:background="@drawable/shape_16000000_15"
            android:paddingLeft="@dimen/dp_19"
            android:paddingTop="@dimen/dp_3"
            android:paddingRight="@dimen/dp_19"
            android:paddingBottom="@dimen/dp_3"
            android:text="@string/guest_team"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_all_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_toLeftOf="@+id/tv_guest_team"
            android:background="@drawable/shape_0090ec_15"
            android:paddingLeft="@dimen/dp_19"
            android:paddingTop="@dimen/dp_3"
            android:paddingRight="@dimen/dp_19"
            android:paddingBottom="@dimen/dp_3"
            android:text="@string/all"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_home_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_13"
            android:background="@drawable/shape_16000000_15"
            android:paddingLeft="@dimen/dp_19"
            android:paddingTop="@dimen/dp_3"
            android:paddingRight="@dimen/dp_19"
            android:paddingBottom="@dimen/dp_3"
            android:text="@string/home_count"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_guest_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_13"
            android:background="@drawable/shape_16000000_15"
            android:paddingLeft="@dimen/dp_19"
            android:paddingTop="@dimen/dp_3"
            android:paddingRight="@dimen/dp_19"
            android:paddingBottom="@dimen/dp_3"
            android:text="@string/guest_count"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_9"
        android:layout_marginTop="@dimen/dp_11"
        android:layout_marginBottom="@dimen/dp_8"
        android:text="@string/league"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />

    <com.example.zhugeyouliao.widget.CustomRecyclerView
        android:id="@+id/rlv_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_6"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_6" />

    <include layout="@layout/layout_recycleview"/>

</LinearLayout>