<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp_10"
    android:layout_marginRight="@dimen/dp_10"
    android:layout_marginBottom="@dimen/dp_10"
    android:background="@drawable/shape_white_10"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_detials_material"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_white_10_top"
            android:gravity="center"
            android:text="@string/main_material"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_detials_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_live"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />


        <TextView
            android:id="@+id/tv_detials_matches"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/matches"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_detials_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/contest_video"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/white"/>

    <com.example.zhugeyouliao.widget.NoScrollViewPager
        android:id="@+id/nvp_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>