<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_181F24">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_login_bg" />


    <include layout="@layout/common_title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_187"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/shape_000c30_14"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llt_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_account_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_4d1cf2_14_top"
                android:gravity="center"
                android:text="@string/account_login"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_verification_code_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/verification_code_login"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_34"
            android:layout_marginLeft="@dimen/dp_33"
            android:layout_marginTop="@dimen/dp_39"
            android:layout_marginRight="@dimen/dp_33"
            android:background="@drawable/shape_white_4"
            android:hint="@string/edt_account"
            android:inputType="phone"
            android:paddingLeft="@dimen/dp_29"
            android:textColor="@color/white"
            android:layout_below="@+id/llt_top"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_10" />

        <RelativeLayout
            android:id="@+id/rlt_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_34"
            android:layout_marginLeft="@dimen/dp_33"
            android:layout_marginTop="@dimen/dp_39"
            android:layout_below="@+id/edt_account"
            android:layout_marginRight="@dimen/dp_22"
            android:background="@drawable/shape_white_4">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_34"
                android:layout_toLeftOf="@+id/tv_verification_code"
                android:background="@null"
                android:hint="@string/edt_account"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp_29"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/sp_10" />


            <com.example.zhugeyouliao.widget.VerifyCodeButton
                android:id="@+id/tv_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/dp_7"
                android:paddingLeft="@dimen/dp_7"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_9"
                android:background="@drawable/shape_009afc_6"
                android:text="@string/get_verification_code"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_below="@+id/rlt_pass"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_6"
                android:padding="@dimen/dp_6"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginRight="@dimen/dp_27"
                android:padding="@dimen/dp_6"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />

        </LinearLayout>
        
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="@dimen/dp_178"
            android:layout_height="@dimen/dp_28"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/rlt_pass"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10"
            android:text="@string/login"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_009afc_6"
            android:layout_marginBottom="@dimen/dp_19"
            android:layout_marginTop="@dimen/dp_38"/>

    </RelativeLayout>


</RelativeLayout>