<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_181F24"
    android:orientation="vertical">


    <include layout="@layout/common_title_bar" />

    <RelativeLayout
        android:id="@+id/rlt_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/shape_white_4">

        <com.example.zhugeyouliao.widget.CircleImageView
            android:id="@+id/civ_header"
            android:layout_width="@dimen/dp_52"
            android:layout_height="@dimen/dp_52"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_21"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_toRightOf="@+id/civ_header"
            android:drawableRight="@mipmap/ic_back_white_right"
            android:paddingRight="@dimen/dp_5"
            android:text="@string/header"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginBottom="@dimen/dp_5"
        android:text="@string/update_nickname"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/shape_white_4"
        android:paddingLeft="@dimen/dp_10">

        <EditText
            android:id="@+id/edt_nickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/iv_nickname_delete"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_nickname"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            android:textColorHint="@color/color_C2C2C2" />

        <ImageView
            android:id="@+id/iv_nickname_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/dp_7"
            android:paddingRight="@dimen/dp_7"
            android:src="@mipmap/ic_detele" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginBottom="@dimen/dp_5"
        android:text="@string/update_sign"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_107"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/shape_white_4"
        android:paddingLeft="@dimen/dp_10">

        <EditText
            android:id="@+id/edt_sign"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/iv_sign_delete"
            android:background="@null"
            android:gravity="left"
            android:paddingTop="@dimen/dp_8"
            android:hint="@string/hint_sign"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            android:textColorHint="@color/color_C2C2C2" />

        <ImageView
            android:id="@+id/iv_sign_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/dp_7"
            android:src="@mipmap/ic_detele" />

    </RelativeLayout>

</LinearLayout>